# TNLCM

./: .dockerignore  .env.template  .gitignore  CHANGELOG.md  Jenkinsfile  README.md  api_server.py  app.py  config.py  docker-compose.yaml  docker-compose.yml  first_descriptor.yml  pyproject.toml  requirements.txt  ruff.toml  sample_descriptor.yml  sample_descriptor_2.yml  sample_descriptor_simple.yml
.github/: CODEOWNERS  issue_template.md
api/: __init__.py  testbed.py  trial_network.py
conf/: __init__.py  config.py  flask_conf.py  gunicorn.conf.py  gunicorn_conf.py  influxdb2.py  jenkins.py  library.py  mail.py  mongodb.py  repository.py  sites.py  sixg_library.py  sixg_sandbox_sites.py  tnlcm.py
core/: Dockerfile  app.py
database/: tnlcm-structure.js  tnlcm-structure.sql
descriptors/: 01_descriptor.yml  02_descriptor.yml  03_descriptor.yml  03_descriptor_e2e.yml  04_descriptor.yml  05_descriptor.yml  06_descriptor.yml  07_descriptor.yml  08_descriptor.yml  09_descriptor.yml  10_descriptor.yaml  10_descriptor.yml  11_descriptor.yml  reference_tn.yaml  second_descriptor.yml
docs/: README.md
frontend/: Dockerfile  app.py
hoppscotch/: TNLCM_API.json
inventory/: app.py
logs/: log_handler.py
sample_descriptors/: README.md  elcm_loadcore_open5gs_vm.yaml  loadcore_open5gs_k8s.yaml  loadcore_open5gs_vm.yaml  nokia_radio.yaml  ueransim_both_open5gs_k8s.yaml  ueransim_split_open5gs_k8s.yaml
scripts/: deploy_docker.sh  deploy_vm.sh  docker_installer.sh  install.sh  installer.sh  updater.sh  upgrade.sh
shared/: __init__.py  child.py  cli_executor.py  config_base.py  io.py  library.py  log.py  trial_network.py
tests/: conftest.py
tn_template_lib/: 01_descriptor.yaml  02_descriptor.yaml  03_descriptor.yaml  04_descriptor.yaml  05_descriptor.yaml  06_descriptor.yaml  07_descriptor.yaml  08_descriptor.yaml  09_descriptor.yaml  11_descriptor.yaml  12_descriptor.yaml  13_descriptor.yaml  14_descriptor.yaml  CONTRIBUTING.md  README.md  TRIAL_NETWORKS.md  elcm.yaml  elcm_loadcore_open5gs_vm.yaml  int_p4_sw.yaml  loadcore_open5gs_k8s.yaml  loadcore_open5gs_oneKE.yaml  loadcore_open5gs_vm.yaml  loadcore_reference.yaml  loadcore_wp5.yaml  loadcore_wp5_vm.yaml  nokia.yaml  nokia_radio.yaml  ocf.yaml  oneKE.yaml  open5gs_oneKE.yaml  open5gs_vm-ueransim_both.yaml  open5gs_vm_ueransim_both.yaml  (+12 more)
(+141 files in other folders)
