[project]
name = "tnlcm"
version = "0.5.2"
description = "TNLCM has been designed as a modular application, with the intention of making certain components easily replaceable or extended, while minimizing the effect of changes in other parts of the application."
readme = "README.md"
requires-python = ">=3.13"
authors = [{ name = "Carlos Andreo", email = "c.andreo@uma.es" }]

[dependency-groups]
prod = [
  "Flask==3.1.1",
  "Flask-Cors==6.0.1",
  "flask-restx==1.3.0",
  "Flask-JWT-Extended==4.7.1",
  "gunicorn==23.0.0",
  "mongoengine==0.29.1",
  "python-dotenv==1.1.1",
  "python-jenkins==1.8.2",
  "ruamel.yaml==0.18.14",
  "Werkzeug==3.1.3",
  "jinja2==3.1.6",
  "markdown2==2.5.3",
  "pypdf==5.7.0",
  "reportlab==4.4.2",
  "pdfkit==1.0.0",
]
lint = [
  "ruff==0.12.1",
]

[tool.uv]
default-groups = ["prod"]
